# dummy_xml

./: Cargo.toml  README.md
src/: attribute.rs  document.rs  lib.rs  node.rs  parser.rs  raw_node.rs  unsafe_parser.rs  writer.rs
tests/: parser_test.rs  writer_test.rs
xml/: data1.xml  note.xml
