[package]
name = "dummy_xml"
version = "0.1.3"
authors = ["vietanhto"]
description = "Fast Non-validating XML DOM parser"
readme = "README.md"
repository="https://github.com/vietanhto/dummy_xml"
keywords = ["xml", "parser", "dom"]
license = "MIT"

[dependencies]

[profile.dev]
opt-level = 0
debug = true
